--- a/styles.css
+++ b/styles.css
@@ -147,3 +147,48 @@ th {
 .tag1{
     color: #ee0505;
 }
+.nota {
+    border: 2px solid black; /* Borde negro de 2px de grosor */
+    background-color: yellow; /* Fondo amarillo */
+    padding: 10px; /* Espaciado interno */
+    display: inline-block; /* Para ajustar el ancho al contenido */
+    font-family: Arial, sans-serif; /* Fuente Arial */
+}
+table.historia-html {
+    border-collapse: collapse;
+    width: 100%;
+    background-color: yellow; /* Fondo amarillo */
+}
+
+table.historia-html th, table.historia-html td {
+    border: 2px solid black; /* Bordes negros de 2px de grosor */
+    padding: 8px;
+    text-align: left;
+}
+
+table.historia-html th {
+    background-color: #f2f2f2; /* Fondo gris claro para encabezados */
+}
+
+table.historia-html tbody tr:nth-child(even) {
+    background-color: #f9f9f9; /* Fondo gris claro para filas pares */
+}
+
+table.historia-html tbody tr:nth-child(odd) {
+    background-color: white; /* Fondo blanco para filas impares */
+}
+.negrita {
+    font-weight: bold; /* Aplicar negrita */
+}
+.button {
+    background-color: green;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    display: inline-block;
+}
+
+.button:hover {
+    background-color: darkgreen;
+}
